--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Plugin\PluginManager.cs" />
     <Compile Include="ProjectileExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduledNotification.cs" />
     <Compile Include="Terraria\Tile.cs" />
     <Compile Include="Callbacks\UserInput.cs" />
     <Compile Include="Xna\Audio\AudioStopOptions.cs" />
