Entire solution now compiles, not just the main projects.

--- a/tdsm-utility/tdsm-utility.csproj
+++ b/tdsm-utility/tdsm-utility.csproj
@@ -62,7 +62,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="tdsm">
-      <HintPath>..\tdsm-patcher\bin\x86\Debug\tdsm.mono.exe</HintPath>
+      <HintPath>..\Binaries\tdsm.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
