Forgot to see if plugins compile correctly...

--- a/PluginExamples/C#/BareBones/BareBones.csproj
+++ b/PluginExamples/C#/BareBones/BareBones.csproj
@@ -35,7 +35,7 @@
       <HintPath>..\..\..\Binaries\tdsm.api.dll</HintPath>
     </Reference>
     <Reference Include="tdsm">
-      <HintPath>..\..\..\Binaries\tdsm.microsoft.exe</HintPath>
+      <HintPath>..\..\..\Binaries\tdsm.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
