--- a/PluginExamples/VB/BareBones/BareBones.vbproj
+++ b/PluginExamples/VB/BareBones/BareBones.vbproj
@@ -52,7 +52,7 @@
       <HintPath>..\..\..\Binaries\tdsm.api.dll</HintPath>
     </Reference>
     <Reference Include="tdsm">
-      <HintPath>..\..\..\Binaries\tdsm.microsoft.exe</HintPath>
+      <HintPath>..\..\..\Binaries\tdsm.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
