--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@
 /PluginExamples/C#/BareBones/obj
 /PluginExamples/VB/BareBones/bin
 /PluginExamples/VB/BareBones/obj
+/PluginExamples/F#/BareBones/bin
+/PluginExamples/F#/BareBones/obj
 
 cecil
 
