--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Callbacks\NAT.cs" />
     <Compile Include="Callbacks\NPCCallback.cs" />
     <Compile Include="Callbacks\NetMessageCallback.cs" />
+    <Compile Include="Callbacks\VanillaHooks.cs" />
     <Compile Include="Callbacks\WorldFileCallback.cs" />
     <Compile Include="Command\ArgumentList.cs" />
     <Compile Include="Command\CommandParser.cs" />
