--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Misc\ArrayDequeue.cs" />
     <Compile Include="Sockets\ServerSlot.cs" />
     <Compile Include="Misc\ProgramThread.cs" />
+    <Compile Include="Extensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
