--- a/tdsm-core/tdsm-core.csproj
+++ b/tdsm-core/tdsm-core.csproj
@@ -61,9 +61,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Misc\ProgressWebClient.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="ServerCharacters\CharacterManager.cs" />
     <Compile Include="ServerCharacters\ServerCharacter.cs" />
     <Compile Include="Repository.cs" />
@@ -75,19 +72,13 @@
     <Compile Include="Definitions\DefinitionManager.cs" />
     <Compile Include="Heartbeat.cs" />
     <Compile Include="Events\HookPoints.cs" />
-    <Compile Include="Logging\LogChannel.cs" />
-    <Compile Include="Logging\LogTarget.cs" />
-    <Compile Include="Logging\LogTraceListener.cs" />
-    <Compile Include="Logging\ProgramLog.cs" />
-    <Compile Include="Logging\ProgressLogger.cs" />
-    <Compile Include="Logging\SendingLogger.cs" />
-    <Compile Include="Misc\ProducerConsumerSignal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Misc\ArrayDequeue.cs" />
-    <Compile Include="Misc\ProgramThread.cs" />
     <Compile Include="ServerEntry.cs" />
     <Compile Include="Entry.cs" />
     <Compile Include="World.cs" />
+    <Compile Include="RemoteConsole\RConClient.cs" />
+    <Compile Include="RemoteConsole\RConSender.cs" />
+    <Compile Include="RemoteConsole\RConServer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -103,4 +94,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Folder Include="RemoteConsole\" />
+  </ItemGroup>
 </Project>
