Official config is now merged

--- a/tdsm-patcher/tdsm-patcher.csproj
+++ b/tdsm-patcher/tdsm-patcher.csproj
@@ -83,6 +83,9 @@
       <Link>serverconfig.txt</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Include="additional.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Official\start-server.bat">
