Bit more on data storage

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -132,3 +132,14 @@ server-side-characters=true
 #DEVELOPER config. This section is to disable TDSM starting it's own custom server implementation.
 #Set to false to use Re-Logic server code
 tdsm-server-core=true
+
+#================================================================
+#================================================================
+#				   			Data storage
+#================================================================
+#================================================================
+# These settings apply when you use a plugin data connector 
+# such as tdsm-sqlite-connector. These plugins handle how data
+# is stored. There should only every be one data connector.
+#================================================================
+sqlite=database.sqlite
