Started on the MySQL connector

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -142,4 +142,9 @@ tdsm-server-core=true
 # such as tdsm-sqlite-connector. These plugins handle how data
 # is stored. There should only every be one data connector.
 #================================================================
-sqlite=database.sqlite
+
+#Sets the database to be used
+#sqlite=database.sqlite
+
+#Connection string for MySQL
+mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
