--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -75,4 +75,7 @@ tdsm-server-core=true
 #================================================================
 
 #Sets the database to be used
-sqlite=database.sqlite
+#sqlite=database.sqlite
+
+#Connection string for MySQL
+mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
