Bit of work to storages

--- a/tdsm-mysql-connector/tdsm-mysql-connector.csproj
+++ b/tdsm-mysql-connector/tdsm-mysql-connector.csproj
@@ -33,6 +33,7 @@
       <HintPath>Libraries\MySql.Data.dll</HintPath>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
