refactored config options
for better readability and organization

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -1,68 +1,103 @@
-﻿#================================================================
+﻿#=======================================================================
 #================================================================
 #				   Additional TDSM configuration
 #================================================================
 #================================================================
 
-#true to enable the whitelist
-usewhitelist=false
+# Enable the whitelist. The whitelist is stored in Data\whitelist.txt.
+# [true|false] Default: true
+usewhitelist=true
 
-#true to enforce the core to only run as a vanilla server under linux
+# LINUX ONLY
+# Enforce the core to only run as a vanilla server.
+# [true|false] Default: true
 vanilla-server=false
 
-#Allows communication to the TDSM server
-#heartbeat=true
+# Allows communication to the TDSM heartbeat server.
+# [true|false] Default: true
+heartbeat=true
 
-#true to show on the server list, heartbeat must be enabled.
-#server-list=true
-
-#Name on server list
-server-list-name=TDSM Server
-
-#Description to use on the server list
-server-list-desc=This is an example of the description for use in the TDSM Server List.\n\nHello World!
-
-#Instead of displaying the IP, opt to display your domain
-server-list-domain=tdsm.org
-
-#Address for the Remote Console server to bind to
-rcon-bind-address=127.0.0.1:7023
-
-#Remote console random hashing key, set to something completely random. This is used to hash your user/passwords so if you change it will invalidate all logins.
-#If this is not specified one will be generated and stored in Data\rcon.nonce
-#rcon-hash-nonce=
-
-#The address that the web server should listen on, to disable simply comment the line out.
-#If you change the port please ensure you change the META TAG tdsm:port in /WebInterface/Files/index.html
-#[Notice: Web server is still in development and is disabled in build 2b]
-web-server-bind-address=127.0.0.1:8448
-
-#Set to false if you wish to use another application to serve HTML files (such as nginx or apache)
-web-server-serve-files=true
-
-#The provider/your server name shown to the web user. 
-web-server-provider=TDSM Rebind Server Host
-
-#Max client queue memory size
+# Max client queue memory size. The limit of how much data is queued to be sent to a single client.
+# [Integer] Default: 1024
+# Recommended between 1024 and 4096.
 send-queue-quota=1024
 
-#Allows bypassing of the slot queue mechanism when the server reaches the player limit.
-#Note: This is typically implemented by a plugins. For example when used in conjunction with restrict it allows operators to bypass the queue.
+# Allows bypassing of the slot queue mechanism when the server reaches the player limit.
+# This is typically implemented by a plugin. For example when used in conjunction with restrict it allows operators to bypass the queue.
+# {Integer] Default: 1
 overlimit-slots=1
 
-#Location of a pid file to maintain.
+# Location of a PID file to maintain.
+# Comment out if not using a PID file.
 #pid-file=process.pid
 
-#If you are having issues with being kicked with forgery messages and you wish to disable TDSM's cheat detection
-#this will allow you to do so. (This is seperate from the official server's "secure" config property)
-#Enabled by default
-#cheat-detection=true
+# If you are having issues with being kicked with forgery messages and you wish to disable TDSM's cheat detection this will allow you to do so.
+# NOTE: This is separate from the official server's "secure" config property.
+# [true|false] Default: true
+cheat-detection=true
 
+# Server Side Characters (SSC)
+# Allows the server to store and use character files instead of letting the client. Can be used to prevent cross-world contamination or cheating.
+# [true|false] Default: true
 server-side-characters=true
 
-#DEVELOPER config. This section is to disable TDSM starting it's own custom server implementation.
-#Set to false to use Re-Logic server code
+# DEVELOPER config. This is to disable TDSM starting it's own custom server implementation.
+# Set to false to use Re-Logic server code.
+# [true|false] Default: true
 tdsm-server-core=true
+
+# ============================================
+#                SERVER LIST
+# ============================================
+
+# Show this server on the server list.
+# Requirement: heartbeat=true
+# [true|false] Default: true
+#server-list=true
+
+# The name of this server on the server list.
+# Requirement: server-list=true
+# This option CANNOT be blank.
+server-list-name=TDSM Server
+
+# Description of this server on the server list.
+# Requirement: server-list=true
+server-list-desc=This is an example of the description for use in the TDSM Server List.\n\nHello World!
+
+# Instead of displaying the IP on the server list, opt to display your domain.
+# Requirement: server-list=true
+#server-list-domain=tdsm.org
+
+# ============================================
+#       RCON - Remote Server Console
+# ============================================
+
+# Address for the Remote Console server to bind to.
+$ Syntax: IP:PORT
+# Default: 127.0.0.1:7023
+rcon-bind-address=127.0.0.1:7023
+
+# Remote console random hashing key, set to something completely random. This is used to hash your user/passwords so if you change it will invalidate all logins.
+# If this is not specified one will be generated and stored in Data\rcon.nonce
+#rcon-hash-nonce=
+
+# ============================================
+#                 WEB SERVER
+# ============================================
+
+# Listen Address
+# The address that the web server should listen on.
+# To disable simply comment the line out.
+# If you change the port please ensure you change the META TAG tdsm:port in /WebInterface/Files/index.html
+# NOTE: Web server is still in development and is disabled in build 2b.
+web-server-bind-address=127.0.0.1:8448
+
+# Set to false if you wish to use another application to serve HTML files (such as nginx or apache)
+# [true|false] Default: true
+web-server-serve-files=true
+
+# The provider/your server name shown to the web user.
+web-server-provider=TDSM Rebind Server Host
 
 #================================================================
 #================================================================
@@ -71,11 +106,15 @@ tdsm-server-core=true
 #================================================================
 # These settings apply when you use a plugin data connector 
 # such as tdsm-sqlite-connector. These plugins handle how data
-# is stored. There should only every be one data connector.
+# is stored. There should only ever be one data connector.
+#
+# NOTE: These functions are not yet functional.
+#       It's for an upcoming release.
 #================================================================
 
-#Sets the database to be used
+# Sets the database to be used.
+# Default: database.sqlite
 #sqlite=database.sqlite
 
-#Connection string for MySQL
+# Connection string for MySQL.
 mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
