--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -14,6 +14,7 @@ usewhitelist=true
 vanilla-server=false
 
 # Allows communication to the TDSM heartbeat server.
+# Default data sent when heartbeat is enabled: Api version, core version, platform, unique identifier (hashed), npc and item definition version, and how many unique players have connected (only the sum of).
 # [true|false] Default: true
 heartbeat=true
 
@@ -51,6 +52,7 @@ tdsm-server-core=true
 # ============================================
 
 # Show this server on the server list.
+# Default data sent when server-list is enabled: Port, max players, server name, server description.
 # Requirement: heartbeat=true
 # [true|false] Default: true
 #server-list=true
