added note for SSC

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -39,6 +39,7 @@ cheat-detection=true
 
 # Server Side Characters (SSC)
 # Allows the server to store and use character files instead of letting the client. Can be used to prevent cross-world contamination or cheating.
+# NOTE: Not Implemented Yet!
 # [true|false] Default: true
 server-side-characters=true
 
