updated web server name
change from "web server" to it's actual name

--- a/tdsm-patcher/additional.config
+++ b/tdsm-patcher/additional.config
@@ -85,7 +85,7 @@ rcon-bind-address=127.0.0.1:7023
 #rcon-hash-nonce=
 
 # ============================================
-#                 WEB SERVER
+#       RAWS - REMOTE ADMIN WEB SERVER
 # ============================================
 
 # Listen Address
