--- a/tdsm-core/tdsm-core.csproj
+++ b/tdsm-core/tdsm-core.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{48477B14-CEAA-47AA-98F1-EF935734DBC5}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>tdsm.core</RootNamespace>
+    <RootNamespace>TDSM.Core</RootNamespace>
     <AssemblyName>tdsm.core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
