--- a/tdsm-api/tdsm-api.csproj
+++ b/tdsm-api/tdsm-api.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Misc\Tasks.cs" />
     <Compile Include="Callbacks\Utilities.cs" />
     <Compile Include="Data\IDataConnector.cs" />
+    <Compile Include="Data\AuthenticatedUsers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
