--- a/tdsm-sqlite-connector/tdsm-sqlite-connector.csproj
+++ b/tdsm-sqlite-connector/tdsm-sqlite-connector.csproj
@@ -32,6 +32,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Xml" />
+    <Reference Include="tdsm">
+      <HintPath>..\Binaries\tdsm.exe</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
