--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -185,8 +185,7 @@ web-server-provider=TDSM Rebind Server Host
 #================================================================
 
 # Sets the database to be used.
-# Default: database.sqlite
-#sqlite=database.sqlite
+#sqlite=Data Source=database.sqlite;Version=3;
 
 # Connection string for MySQL.
 mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
