--- a/tdsm-mysql-connector/tdsm-mysql-connector.csproj
+++ b/tdsm-mysql-connector/tdsm-mysql-connector.csproj
@@ -29,13 +29,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="MySql.Data">
-      <HintPath>Libraries\MySql.Data.dll</HintPath>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="tdsm">
       <HintPath>..\Binaries\tdsm.exe</HintPath>
+    </Reference>
+    <Reference Include="MySql.Data">
+      <HintPath>Libraries\MySql.Data.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -60,6 +60,6 @@
     <Folder Include="Tables\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="IsPermitted.sql" />
+    <EmbeddedResource Include="IsPermitted.sql" />
   </ItemGroup>
 </Project>
