--- a/tdsm-sqlite-connector/tdsm-sqlite-connector.csproj
+++ b/tdsm-sqlite-connector/tdsm-sqlite-connector.csproj
@@ -35,13 +35,20 @@
     <Reference Include="tdsm">
       <HintPath>..\Binaries\tdsm.exe</HintPath>
     </Reference>
+    <Reference Include="Mono.Data.Sqlite">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLiteConnector.cs" />
     <Compile Include="Plugin.cs" />
-    <Compile Include="SQLite.cs" />
-    <Compile Include="SQLiteAsync.cs" />
+    <Compile Include="Permissions.cs" />
+    <Compile Include="Tables\GroupPermissions.cs" />
+    <Compile Include="Tables\Groups.cs" />
+    <Compile Include="Tables\UserPermissions.cs" />
+    <Compile Include="Tables\Users.cs" />
+    <Compile Include="Tables\Permissions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -52,6 +59,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tables\" />
   </ItemGroup>
 </Project>
