--- a/tdsm-mysql-connector/tdsm-mysql-connector.csproj
+++ b/tdsm-mysql-connector/tdsm-mysql-connector.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Tables\GroupPermissions.cs" />
     <Compile Include="Tables\UserPermissions.cs" />
     <Compile Include="Tables\Permission.cs" />
-    <Compile Include="Tables\Users.cs" />
+    <Compile Include="Tables\UserGroups.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
