SQLite is fetchable, next up is the permissions implementation

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -185,7 +185,7 @@ web-server-provider=TDSM Rebind Server Host
 #================================================================
 
 # Sets the database to be used.
-#sqlite=Data Source=database.sqlite;Version=3;
+sqlite=Data Source=database.sqlite;Version=3;
 
 # Connection string for MySQL.
-mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
+#mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
