--- a/tdsm-sqlite-connector/tdsm-sqlite-connector.csproj
+++ b/tdsm-sqlite-connector/tdsm-sqlite-connector.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Tables\UserPermissions.cs" />
     <Compile Include="Tables\Permissions.cs" />
     <Compile Include="Tables\UserGroups.cs" />
+    <Compile Include="Tables\CacheTable.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
