Added missing comments to server config mods

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -22,7 +22,7 @@
 #remove the # in front of commands to enable them.
 
 #Load a world and automatically start the server.
-If your server is running linux make sure to use forward slashes for your directory.
+#If your server is running linux make sure to use forward slashes for your directory.
 #world=Worlds/world.wld
 #world=C:\Users\YOUR_USERNAME_HERE\My Documents\My Games\Terraria\Worlds\world1.wld
 
@@ -48,7 +48,7 @@ If your server is running linux make sure to use forward slashes for your direct
 #motd=Please don’t cut the purple trees!
 
 #Sets the folder where world files will be stored
-If your server is running linux make sure to use forward slashes for your directory.
+#If your server is running linux make sure to use forward slashes for your directory.
 #worldpath=Worlds/
 #worldpath=C:\Users\Defaults\My Documents\My Games\Terraria\Worlds\
 
