--- a/tdsm-patcher/serverconfig.mods.json
+++ b/tdsm-patcher/serverconfig.mods.json
@@ -3,7 +3,7 @@
 		"OfficialLinePrefix": "#world=C:",
 		"Offset": -1,
 		"Modifications": [
-			"If your server is running linux make sure to use forward slashes for your directory.",
+			"#If your server is running linux make sure to use forward slashes for your directory.",
 			"#world=Worlds/world.wld"
 		]
 	},
@@ -11,7 +11,7 @@
 		"OfficialLinePrefix": "#worldpath=C:",
 		"Offset": -1,
 		"Modifications": [
-			"If your server is running linux make sure to use forward slashes for your directory.",
+			"#If your server is running linux make sure to use forward slashes for your directory.",
 			"#worldpath=Worlds/"
 		]
 	},
