Fixed invasion warning duplicate, plus multiple custom npcs in an invasion

--- a/Binaries/server.config
+++ b/Binaries/server.config
@@ -80,11 +80,6 @@ priority=1
 # [true|false] Default: true
 usewhitelist=true
 
-# LINUX ONLY
-# Enforce the core to only run as a vanilla server.
-# [true|false] Default: true
-vanilla-server=false
-
 # Allows communication to the TDSM heartbeat server.
 # Default data sent when heartbeat is enabled: Api version, core version, platform, unique identifier (hashed), npc and item definition version, and how many unique players have connected (only the sum of).
 # [true|false] Default: true
@@ -93,12 +88,14 @@ heartbeat=true
 # Max client queue memory size. The limit of how much data is queued to be sent to a single client.
 # [Integer] Default: 1024
 # Recommended between 1024 and 4096.
-send-queue-quota=1024
+# [Currently not working since 1.3]
+#send-queue-quota=1024
 
 # Allows bypassing of the slot queue mechanism when the server reaches the player limit.
 # This is typically implemented by a plugin. For example when used in conjunction with restrict it allows operators to bypass the queue.
 # {Integer] Default: 1
-overlimit-slots=1
+# [Currently not working since 1.3]
+#overlimit-slots=1
 
 # Location of a PID file to maintain.
 # Comment out if not using a PID file.
@@ -188,7 +185,7 @@ web-server-provider=TDSM Rebind Server Host
 #================================================================
 
 # Sets the database to be used.
-#sqlite=Data Source=database.sqlite;Version=3;
+sqlite=Data Source=database.sqlite;Version=3;
 
 # Connection string for MySQL.
-mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
+#mysql=Server=127.0.0.1;Database=tdsm;Uid=root;Pwd=;
